@@ -14,7 +14,7 @@ Changes in 4.1.7
 
 7)  Fix priority mingling in tc filters.
 
-8)  Fix policy parsing.
+8)  Fix ":" parsing errors.
 
 Changes in 4.1.6
 
