@@ -92,6 +92,9 @@ Problems corrected in Shorewall-perl 4.1.7.
 4)  A POLICY of ":" in /etc/shorewall/policy would produce Perl
     run-time errors.
 
+6)  An INTERFACE of ":" in /etc/shorewall/interfaces would produce Perl
+    run-time errors.
+
 New Features in 4.1.7.
 
 1)  If an interface fails when using balanced multi-ISP routing, the
